fixed navbar and remove scrollbar

--- a/IPC-Frontend/src/styles.scss
+++ b/IPC-Frontend/src/styles.scss
@@ -2,3 +2,7 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 /* Quartz Theme Specific CSS */
 @import 'ag-grid-community/styles/ag-theme-quartz.css';
+
+*::-webkit-scrollbar {
+    display: none;
+  }
